# desafio_tecnico_sicredi_1

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
rpa_sicredi/abstract/: directory_manager.py  exception.py  webdriver_base_actions.py
rpa_sicredi/drivers/: webdriver_setup.py
rpa_sicredi/files/: lista_produtos.csv  readme.md
rpa_sicredi/managers/: csv_manager.py
rpa_sicredi/mixin/: page_element_mixin.py  page_system_mixin.py
rpa_sicredi/pages/: page_sicredi.py
